# BanaPE

./: .gitignore  README.en.md  README.md  README.zh-CN.md  UI_IMPROVEMENT_GUIDE.md  index.html  package-lock.json  package.json
patches/: README.md  component-index.toml
patches/components/: dsmsvc.toml  dwm.toml  ime.toml  mmc.toml  msi.toml  mspaint.toml  notepad.toml  shell.toml  vcruntime.toml  winphotoviewer.toml
patches/core/: account.toml  build-config.toml
patches/drivers/: drivers.toml
patches/network/: network.toml
patches/runtime-kits/: runtime-kits.toml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create-icon.ps1
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: build.rs  config_cmd.rs  dialog.rs  mod.rs  patches.rs  tests.rs  wim.rs
src-tauri/src/engine/: builder.rs  config.rs  file_extractor.rs  iso_creator.rs  mod.rs  registry.rs  tool_runner.rs  wim_manager.rs
src-tauri/src/patches/: config.rs  context.rs  loader.rs  mod.rs
src-tauri/src/patches/components/: dsmsvc.rs  dwm.rs  ime.rs  mmc.rs  mod.rs  msi.rs  mspaint.rs  notepad.rs  shell.rs  vcruntime.rs  winphotoviewer.rs
src-tauri/src/patches/core/: account.rs  build_config.rs  customization.rs  mod.rs
src-tauri/src/patches/drivers/: drivers.rs
src-tauri/src/patches/network/: network.rs
src-tauri/src/patches/runtime_kits/: mod.rs  runtime_kits.rs
src-tauri/src/tests/: mod.rs
src/i18n/: en.ts  index.ts  ja.ts  ko.ts  ru.ts  zh-CN.ts
src/styles/: main.css
src/views/: BuildView.vue  (+2 more)
